--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,12 @@ h2 {
   border-right: 1px solid black;
 }
 
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 .hero-banner {
   display: flex;
   height: 500px;
@@ -102,11 +108,6 @@ h2 {
   margin-left: 20px;
 }
 
-#images {
-  grid-area: images;
-  margin-left: 20px;
-}
-
 #contactMe {
   grid-area: contactMe;
   margin-left: 20px;
@@ -116,4 +117,76 @@ h2 {
   display: flex;
   justify-content: flex-end;
   padding: 0px 20px 0px 0px;
+}
+
+/* CSS images */
+#images {
+  height: 1000px;
+  grid-area: images;
+  margin-left: 20px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 25% 25%;
+  grid-template-areas:
+    "workImg1 workImg1"
+    "workImg2 workImg3"
+    "workImg4 workImg5";
+  flex-direction: column;
+}
+
+.workImg1 {
+  grid-area: workImg1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: end;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/02-portfolio-1.jpg);
+}
+
+.workImg2 {
+  grid-area: workImg2;
+  display: flex;
+  justify-content: flex-start;
+
+  background-image: url(../images/02-portfolio-2.jpg);
+}
+
+.workImg3 {
+  grid-area: workImg3;
+  display: flex;
+  justify-content: flex-start;
+  align-items: end;
+  background-image: url(../images/02-portfolio-3.jpg);
+}
+
+.workImg4 {
+  grid-area: workImg4;
+  display: flex;
+  justify-content: flex-start;
+  align-items: end;
+  background-image: url(../images/02-portfolio-2.jpg);
+}
+
+.workImg5 {
+  grid-area: workImg5;
+  display: flex;
+  justify-content: flex-start;
+  align-items: end;
+  background-image: url(../images/02-portfolio-2.jpg);
+}
+/*  */
+.workImg1 h1 {
+  background-color: var(--light);
+  width: 10%;
+  height: 100px;
+  padding: 10px 0px 10px 10px;
+  margin: 0px 0px 5px 5px;
+}
+.workImg2 h1 {
+  background-color: var(--light);
+  width: 15%;
+  height: 100px;
+  padding: 10px 0px 10px 10px;
+  margin: 0px 0px 5px 5px;
 }
