--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ h2 {
   border-right: 1px solid black;
 }
 
+.page-section h2 {
+  color: var(--dark);
+}
+
 .page-wrapper {
   display: flex;
   flex-direction: column;
@@ -106,13 +110,22 @@ h2 {
 #aboutMe {
   grid-area: aboutMe;
   margin-left: 20px;
+  font-size: 30px;
 }
 
 #contactMe {
+  display: flex;
+  justify-content: space-between;
   grid-area: contactMe;
   margin-left: 20px;
 }
 
+#contactMe a {
+  text-decoration: none;
+  font-size: 20px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid var(--dark);
+}
 .page-section h2 {
   display: flex;
   justify-content: flex-end;
@@ -120,10 +133,11 @@ h2 {
 }
 
 /* CSS images */
+/* images container grid */
 #images {
   height: 1000px;
   grid-area: images;
-  margin-left: 20px;
+  /* margin-left: 20px; */
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 50% 25% 25%;
@@ -131,62 +145,78 @@ h2 {
     "workImg1 workImg1"
     "workImg2 workImg3"
     "workImg4 workImg5";
-  flex-direction: column;
 }
-
+/* images  */
 .workImg1 {
+  margin: 0px 0px 10px 10px;
   grid-area: workImg1;
   display: flex;
   justify-content: flex-start;
   align-items: end;
-  width: 100%;
-  height: 100%;
-  background-image: url(../images/02-portfolio-1.jpg);
+  background-image: url(../images/02-portfolio-2.jpg);
+  background-size: cover;
+}
+
+.workImg1 h1 a {
+  background-size: cover;
 }
 
 .workImg2 {
+  margin: 10px 10px 10px 10px;
   grid-area: workImg2;
   display: flex;
   justify-content: flex-start;
-
-  background-image: url(../images/02-portfolio-2.jpg);
+  align-items: end;
+  background-image: url(../images/02-portfolio-3.jpg);
+  background-size: cover;
 }
 
 .workImg3 {
+  margin: 10px 0px 10px 10px;
   grid-area: workImg3;
   display: flex;
   justify-content: flex-start;
   align-items: end;
   background-image: url(../images/02-portfolio-3.jpg);
+  background-size: cover;
 }
 
 .workImg4 {
+  margin: 10px 10px 10px 10px;
   grid-area: workImg4;
   display: flex;
   justify-content: flex-start;
   align-items: end;
-  background-image: url(../images/02-portfolio-2.jpg);
+  background-image: url(../images/02-portfolio-3.jpg);
+  background-size: cover;
 }
 
 .workImg5 {
+  margin: 10px 0px 10px 10px;
   grid-area: workImg5;
   display: flex;
   justify-content: flex-start;
   align-items: end;
-  background-image: url(../images/02-portfolio-2.jpg);
+  background-image: url(../images/02-portfolio-3.jpg);
+  background-size: cover;
 }
-/*  */
-.workImg1 h1 {
+/* H1 inside images*/
+.workImg1 h1,
+.workImg2 h1,
+.workImg3 h1,
+.workImg4 h1,
+.workImg5 h1 {
   background-color: var(--light);
-  width: 10%;
-  height: 100px;
+  width: 200px;
+  height: 90px;
   padding: 10px 0px 10px 10px;
   margin: 0px 0px 5px 5px;
 }
-.workImg2 h1 {
-  background-color: var(--light);
-  width: 15%;
-  height: 100px;
-  padding: 10px 0px 10px 10px;
-  margin: 0px 0px 5px 5px;
+
+.workImg1:hover,
+.workImg2:hover,
+.workImg3:hover,
+.workImg4:hover,
+.workImg5:hover {
+  opacity: 0.5;
 }
