--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 :root {
   --light: rgb(168, 218, 220);
   --dark: rgb(102, 106, 110);
+  --shadow: 10px 10px 100px var(--dark);
 }
 /* All elements */
 * {
@@ -82,6 +83,13 @@ h2 {
   padding: 5px 10px 5px 10px;
   background-color: var(--light);
   color: var(--dark);
+  box-shadow: var(--shadow);
+}
+.hero-banner img {
+  position: relative;
+  right: 73%;
+  bottom: 15%;
+  box-shadow: var(--shadow);
 }
 /* Main content CSS */
 #about {
